--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -2847,8 +2847,7 @@
         /* contenteditable 메모 영역 (서식 적용 가능) */
         .estimate-memo .memo-editable {
             width: 100%;
-            max-height: 150px;
-            overflow-y: auto;
+            min-height: 50px;
             padding: 8px;
             border: 1px solid #d2d2d7;
             border-radius: 4px;
@@ -2876,57 +2875,6 @@
             .estimate-table th.col-div,
             .estimate-table col.col-div {
                 display: none;
-            }
-
-            /* 인쇄 시 테이블 레이아웃 고정 및 컬럼 너비 유지 */
-            .estimate-table {
-                table-layout: fixed !important;
-                width: 100% !important;
-            }
-
-            .estimate-table colgroup col {
-                width: auto !important;
-            }
-
-            /* 인쇄 시 컬럼별 너비 명시 (구분 제외 = 8개 컬럼) */
-            .estimate-table th:nth-child(1),
-            .estimate-table td:nth-child(1) {
-                width: 5% !important;
-            }
-
-            .estimate-table th:nth-child(2),
-            .estimate-table td:nth-child(2) {
-                width: 18% !important;
-            }
-
-            .estimate-table th:nth-child(3),
-            .estimate-table td:nth-child(3) {
-                width: 20% !important;
-            }
-
-            .estimate-table th:nth-child(4),
-            .estimate-table td:nth-child(4) {
-                width: 5% !important;
-            }
-
-            .estimate-table th:nth-child(5),
-            .estimate-table td:nth-child(5) {
-                width: 5% !important;
-            }
-
-            .estimate-table th:nth-child(6),
-            .estimate-table td:nth-child(6) {
-                width: 12% !important;
-            }
-
-            .estimate-table th:nth-child(7),
-            .estimate-table td:nth-child(7) {
-                width: 15% !important;
-            }
-
-            .estimate-table th:nth-child(8),
-            .estimate-table td:nth-child(8) {
-                width: 20% !important;
             }
         }
 
