인쇄 스타일 개선: 메모란을 깔끔한 문서 박스 형태로 변경 (높이 제한 해제, 데코레이션 추가)

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -2881,6 +2881,27 @@
             .estimate-table col.col-div {
                 display: none;
             }
+
+            /* 인쇄 시 메모란 스타일 개선 (이미지처럼 깔끔하게) */
+            .estimate-memo .memo-editable {
+                max-height: none !important;
+                height: auto !important;
+                overflow: visible !important;
+                border: none !important;
+                border-left: 4px solid #0071e3 !important;
+                background-color: #f9f9fb !important;
+                border-radius: 0 4px 4px 0 !important;
+                padding: 12px 16px !important;
+                box-shadow: none !important;
+                white-space: pre-wrap !important;
+                -webkit-print-color-adjust: exact;
+                print-color-adjust: exact;
+            }
+
+            /* 인쇄 시 메모 스크롤바 숨김 */
+            .estimate-memo .memo-editable::-webkit-scrollbar {
+                display: none;
+            }
         }
 
         /* 수익 분석 */
