--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -2882,9 +2882,15 @@
                 display: none !important;
             }
 
-            /* 인쇄 시 메모 타이틀 숨김 제거 (이미지 1 기준 복원) */
+            /* 인쇄 시 메모 컨테이너 스타일 확인 (파란색 선 삭제) */
+            .estimate-memo {
+                border-left: none !important;
+                padding-left: 0 !important;
+                margin-top: 10px !important;
+                display: block !important;
+            }
 
-            /* 인쇄 시 메모란 스타일 개선: 내용 전체 표시 및 문서화 (이미지 1 기준: 파란색 포인트 복원) */
+            /* 인쇄 시 메모란 스타일 개선: 회색 박스만 표시 (파란선은 부모가 담당 -> 삭제됨) */
             .estimate-memo .memo-editable {
                 display: block !important;
                 height: auto !important;
@@ -2893,11 +2899,11 @@
                 overflow: visible !important;
                 white-space: pre-wrap !important;
 
-                /* 스타일링: 기준 이미지 1 매칭 (파란색 포인트, 연회색 배경, 테두리 없음) */
+                /* 스타일링: 회색 배경, 테두리 없음 */
                 border: none !important;
-                border-left: 4px solid #0071e3 !important;
                 background-color: #f9f9fb !important;
-                border-radius: 0 4px 4px 0 !important;
+                border-radius: 4px !important;
+                /* 4면 모두 둥글게 */
                 padding: 12px 16px !important;
                 margin-top: 5px !important;
 
