--- a/adminwonpro_mobile.html
+++ b/adminwonpro_mobile.html
@@ -18900,6 +18900,9 @@
         <div class="mobile-menu-item readonly" onclick="mobileGoToPanel('panel-as'); closeMobileMenu();">
             🔧 A/S 관리
         </div>
+        <div class="mobile-menu-item readonly" onclick="navigateToEstimate(); closeMobileMenu();">
+            📑 계약 견적서
+        </div>
         <hr style="margin: 16px 0; border: none; border-top: 1px solid #e8e8ed;">
         <div class="mobile-menu-item" onclick="showAdminModal(); closeMobileMenu();">
             🔐 관리자 로그인
@@ -18922,6 +18925,16 @@
                 <path d="M8 16H3v5" />
             </svg>
             <span>불러오기</span>
+        </button>
+        <button onclick="navigateToEstimate()">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+                <polyline points="14 2 14 8 20 8"></polyline>
+                <line x1="16" y1="13" x2="8" y2="13"></line>
+                <line x1="16" y1="17" x2="8" y2="17"></line>
+                <polyline points="10 9 9 9 8 9"></polyline>
+            </svg>
+            <span>견적서</span>
         </button>
         <button class="success" onclick="if(typeof syncChecklistToCloud==='function')syncChecklistToCloud();">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round">
@@ -18976,6 +18989,7 @@
             if (panelId === 'panel-checklist') titleText = 'Checklist';
             else if (panelId === 'panel-schedule') titleText = 'Schedule';
             else if (panelId === 'panel-customer-info') titleText = 'Customer Information'; // [Fix]
+            else if (panelId === 'panel-estimate') titleText = 'Contract Estimate';
             else if (panelId === 'panel-stats') titleText = '현황 및 통계';
             else if (panelId === 'panel-expenses') titleText = '비용 관리';
             else if (panelId === 'panel-files') titleText = '파일함';
@@ -19445,6 +19459,24 @@
                 mobileGoToPanel('panel-schedule');
             } else {
                 showCustomerTab('schedule');
+            }
+        }
+
+        function navigateToEstimate() {
+            if (!currentCustomerId) {
+                showToast('고객을 먼저 선택해주세요', 'warning');
+                return;
+            }
+
+            // [Fix] Update Header Title
+            const titleEl = document.getElementById('headerMobileTitle');
+            if (titleEl) titleEl.textContent = 'Estimate';
+
+            if (isMobile()) {
+                // showCustomerTab('estimate'); // If tab exists
+                mobileGoToPanel('panel-estimate');
+            } else {
+                // Desktop logic if needed
             }
         }
 
